# wallpaper-management-system

./: .gitignore  README.md  deploy.cmd
.github/workflows/: docker-images.yml
backend/: .dockerignore  .env.example  Dockerfile  pom.xml
doc/acceptance/: mvp-checklist.md
doc/api/: api-conventions.md
doc/architecture/: data-model.md  rbac.md  system-architecture.md
doc/deployment/: docker-compose.md  one-click-deploy.md
doc/development/: workflow.md
doc/import/: image-import-plan.md
doc/planning/: development-requirements.md  project-plan.md  roadmap.md
frontend/: .dockerignore  .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: demo-smoke.spec.ts
frontend/src/: components.d.ts  main.ts  style.css
image-uploader/: .env.example  .gitignore  README.md
image-uploader-origin/: .gitignore  README.md  pyproject.toml
image-uploader-origin/src/image_uploader/: __init__.py  client.py  main.py  models.py  report.py  state.py
image-uploader-origin/tests/: test_mapping.py  test_report.py  test_settings.py  test_state_and_plan.py
image-uploader/tests/: test_client_auth.py  test_report.py  test_settings.py  test_state_and_plan.py  test_titles_and_interrupt.py
ops/docker/: .env.example  compose.build.yaml  compose.https.yaml  compose.local.yaml  compose.web.yaml  (+2 more)
scripts/: deploy.ps1  deploy.sh
tools/image-importer/: .env.example  README.md  pyproject.toml
tools/image-importer/src/wallpaper_importer/: __init__.py  client.py  main.py  mapping.py  settings.py
(+266 files in other folders)
