[project]
name = "wzut-wallpaper-image-uploader"
version = "0.1.0"
description = "Batch uploader for the WZUT wallpaper manager textile-defect dataset"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]

[project.scripts]
image-uploader = "image_uploader.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/image_uploader"]
