[project]
name = "wzut-wallpaper-image-importer"
version = "0.1.0"
description = "Batch importer for the WZUT wallcovering image manager"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.0",
]

[project.scripts]
wallpaper-import = "wallpaper_importer.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
